server/src/scss/all-games.scss
/* Fonts */
@use "./base/_theme.scss" as theme;

@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");

/* Import theme variables */

html,
body {
    width: 100%;
    height: 100%;
    padding: 0px;
    margin: 0px;
    /*optional but incase it still doesn't work.*/
    min-width: 100%;
    min-height: 100%;
    /*further optional still incase elements case overflows*/
    max-width: 100%;
    max-height: 100%;
    background-color: theme.$md-sys-background;
    color: theme.$md-sys-on-background;
    font-family: theme.$md-sys-typescale-body1-font, sans-serif;
    font-size: theme.$md-sys-typescale-body1-size;
    user-select: none;
    box-sizing: border-box;
    display: flex;
    font-display: swap;
    overflow: hidden;
    // position: absolute;
    left: 0;
    top: 0;
    right: 0;
    bottom: 0;
}

#loading, #error {
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: theme.$md-sys-background;
    color: theme.$md-sys-on-background;
    font-family: theme.$md-sys-typescale-body1-font, sans-serif;
    font-size: theme.$md-sys-typescale-body1-size;
    position: absolute;
}

.ratio {
    position: relative;
    display: flex;
    vertical-align: middle;
}
.ratio.vertical,
.ratio.vertical > canvas {
    height: 100%;
    max-width: 100%;
}
.ratio.horizontal,
.ratio.horizontal > canvas {
    width: 100%;
    max-height: 100%;
}
.ratio > div {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
}

#error {
    background: none;
}

#app {
    height: 100%;
    display: flex;
    max-height: 100%;
    width: 100%;
    max-width: 100%;
    box-sizing: border-box;
    position: absolute;
    left: 0;
    top: 0;
    right: 0;
    bottom: 0;
}

.middle {
    width: 100%;
    height: 100%;
    max-width: 100%;
    max-height: 100%;
    display: flex;
    box-sizing: border-box;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

h3 {
    font-family: theme.$md-sys-typescale-headline3-font;
    font-size: theme.$md-sys-typescale-headline3-size;
    font-weight: theme.$md-sys-typescale-headline3-weight;
    color: theme.$md-sys-on-background;
    margin: 0;
}

a {
    text-decoration: none;
}

button {
    color: theme.$md-sys-on-primary;
    background-color: theme.$md-sys-primary;
    padding: 0px 24px;
    border: none;
    cursor: pointer;
    border-radius: 500px;
    display: inline-flex;
    justify-content: center;
    align-items: center;
    flex-direction: row;
    overflow: hidden;
    height: 40px;
    user-select: none;
    outline: none;
    box-sizing: border-box;
    min-width: 64px;
    font-size: theme.$md-sys-typescale-button-size;
    line-height: theme.$md-sys-typescale-button-line-height;
    font-family: theme.$md-sys-typescale-button-font;
    box-shadow: theme.$md-elevation-level1;
    font-weight: theme.$md-sys-typescale-button-weight;
    max-height: 36px;
    text-decoration: none;
    gap: 8px;
    transition: background-color 0.2s, box-shadow 0.2s;

    .material-icons {
        font-size: 18px;
        margin-left: -8px;
    }
}

button:disabled {
    box-shadow: theme.$md-elevation-level0;
    background-color: theme.$md-sys-on-surface;
    opacity: 12%;
    color: theme.$md-sys-on-surface;
}

button:hover {
    box-shadow: theme.$md-elevation-level2;
}

button:focus {
    box-shadow: theme.$md-elevation-level1;
}

button:active {
    box-shadow: theme.$md-elevation-level1;
}

// .btn-primary {
//     color: #fff;
//     display: flex;
//     align-items: center;
//     justify-content: center;
//     min-height: 32px;
//     min-width: 60px;
//     font-size: 14px;
//     font-weight: 500;
//     font-family: Roboto, sans-serif;
//     line-height: 16px;
//     margin: 4px 8px 4px 0;
//     padding: 2px 16px;
//     border: 0;
//     border-radius: 3px;
//     box-sizing: border-box;
//     cursor: pointer;
//     transition: background-color .15s ease, color .15s ease;
//     font-weight: bold;
//     background-color: #5577ff;
//     /* Shadow 2dp */
//     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.20);
// }

.btn-icon {
    padding: 8px;
    border-radius: 12px;
    width: 40px;
    height: 40px;
    min-width: 40px;
    min-height: 40px;
}

.btn-fab {
    background-color: theme.$md-sys-primary-container;
    box-shadow: theme.$md-elevation-level3;
    color: theme.$md-sys-on-primary;
    border-radius: 12px;
    height: 40px;
    width: 40px;
    display: flex;
    align-items: center;
    justify-content: center;
    min-width: 40px;
    min-height: 40px;
    max-width: 40px;
    max-height: 40px;
    padding: 0;

    i {
        font-size: 24px;
        width: 24px;
        height: 24px;
        margin-left: 0;
    }
}

.fabs {
    width: 100%;
    display: flex;
    flex-direction: row;
    position: relative;
    z-index: 10;
    justify-content: space-between;
}

.fabs .btn-fab {
    margin: 16px;
}

.bottom {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 100px;
    align-self: flex-end;
    padding-bottom: 16px;
    box-sizing: border-box;
    gap: 8px;
}

.dialog-container {
    position: absolute;
    background-color: rgba(0, 0, 0, 0.5);
    display: flex;
    justify-content: center;
    align-items: center;
    user-select: none;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
}

.dialog-chip {
    background-color: theme.$md-sys-surface-variant;
    color: theme.$md-sys-on-surface-variant;
    padding: 16px;
    border-radius: 100px;
    font-weight: bold;
    animation: pulse 2s infinite;
}

@keyframes pulse {
    0% {
        transform: scale(1);
    }
    50% {
        transform: scale(0.95);
    }
    100% {
        transform: scale(1);
    }
}

.dots span {
    animation: dots 2s linear infinite;
}

.dots span:nth-child(2) {
    animation-delay: 0.4s;
}

.dots span:nth-child(3) {
    animation-delay: 0.8s;
}

@keyframes dots {
    0% {
        opacity: 1;
    }
    50% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

.win-view-chip,
.lose-view-chip,
.draw-view-chip {
    background-color: white;
    color: black;
}

.win-view {
    --webkit-box-shadow: inset 0px 0px 50px 30px #f2ff0077;
    -box-shadow: inset 0px 0px 50px 30px #f2ff0077;
}

.lose-view {
    --webkit-box-shadow: inset 0px 0px 90px 10px #ff220077;
    -box-shadow: inset 0px 0px 90px 10px #f2220077;
}

.lose-view-chip {
    box-shadow: 0 0 32px 0px #d5000077;
}

.win-view-chip {
    box-shadow: 0 0 32px 0px #ffea0077;
}

.fade-enter-active,
.fade-leave-active {
    transition: opacity 0.5s ease;
}

.fade-enter-from,
.fade-leave-to {
    opacity: 0;
}

